# drupal-rust

./: .env.example  .gitignore  Cargo.toml  README.md
sql/: schema.sql
src/: config.rs  error.rs  extractors.rs  main.rs  statistics.rs
src/auth/: middleware.rs  mod.rs  password.rs
src/db/: migrations.rs  mod.rs
src/handlers/: admin.rs  comment.rs  home.rs  install.rs  mod.rs  node.rs  user.rs
src/models/: comment.rs  mod.rs  node.rs  node_field.rs  profile.rs  session.rs  statistics.rs  system.rs  user.rs  variable.rs
static/css/: style.css
static/themes/bluemarine/: style.css
static/themes/pushbutton/: style.css
templates/: base.html  home.html
templates/admin/: content.html  index.html  logs_detail.html  logs_hits.html  logs_pages.html  logs_referrers.html  logs_visitors.html  modules.html  node_type_edit.html  node_types.html  settings.html  statistics_settings.html  status.html  themes.html  users.html
templates/comment/: delete.html  form.html
templates/install/: admin.html  complete.html  database.html  welcome.html
templates/node/: form.html  list.html  view.html
templates/themes/pushbutton/: base.html
templates/user/: edit.html  login.html  profile.html  register.html
